--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -4,11 +4,10 @@
     <title>Artifical Face Generator</title>
     <link rel="stylesheet" href="/staticFiles/style.css">
   </head>
-
   <body>
     <div class="navbar">
       <a href="/">Home</a>
-      <a href="#">About</a>
+      <a href="/About">About</a>
     </div>
     <h1>Artifical Face Generator</h1>
     <div class="images">
