--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Artifical Face Generator</title>
     <link rel="stylesheet" href="/staticFiles/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/staticFiles/FaceGenLogo.png" />
   </head>
   <body>
     <div class="navbar">
