Project Name Change

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -12,10 +12,10 @@
     </div>
         <h1>Artifical Face Generator</h1>
         <div class="about">
-        <p>Human Face Generator is a deep learning project that uses Generative Adversarial Networks (GANs) to generate human faces based on celebrity images. 
+        <p>Human Face Generator is a deep learning project that uses Generative Adversarial Networks (GANs) to generate human faces based on celebrity images.
             The project uses the CelebFaces Attributes Dataset (CelebA) to train the GANs. The project is implemented in Python using the Keras API and Tensorflow Backend.
             <br><br>
-            The end goal for the project is to create realistic human faces that can be used for syntehtic data generation and other applications.
+            The end goal for the project is to create realistic human faces that can be used for synthetic data generation and other applications.
             <br><br>
             The full project is avalable on <a href="https://github.com/Siddhant0701/Human-Face-Generator" target="_blank">GitHub</a>.
         </p>
